learning_components/build/log/idf_py_stdout_output_1904346
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/cold/esp/learning_components/build/bootloader/esp-idf/esptool_py && /home/cold/.espressif/python_env/idf5.0_py3.11_env/bin/python /home/cold/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/cold/esp/learning_components/build/bootloader/bootloader.bin
Bootloader binary size 0x6700 bytes. 0x900 bytes (8%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/blink/CMakeFiles/__idf_blink.dir/blink.c.obj
FAILED: esp-idf/blink/CMakeFiles/__idf_blink.dir/blink.c.obj 
/home/cold/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc  -I/home/cold/esp/learning_components/build/config -I/home/cold/esp/learning_components/components/blink -I/home/cold/esp/learning_components/components/blink/include -I/home/cold/esp/esp-idf/components/newlib/platform_include -I/home/cold/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/cold/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/cold/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/cold/esp/esp-idf/components/freertos/esp_additions/include -I/home/cold/esp/esp-idf/components/esp_hw_support/include -I/home/cold/esp/esp-idf/components/esp_hw_support/include/soc -I/home/cold/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/cold/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/cold/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/cold/esp/esp-idf/components/heap/include -I/home/cold/esp/esp-idf/components/log/include -I/home/cold/esp/esp-idf/components/soc/include -I/home/cold/esp/esp-idf/components/soc/esp32/. -I/home/cold/esp/esp-idf/components/soc/esp32/include -I/home/cold/esp/esp-idf/components/hal/esp32/include -I/home/cold/esp/esp-idf/components/hal/include -I/home/cold/esp/esp-idf/components/hal/platform_port/include -I/home/cold/esp/esp-idf/components/esp_rom/include -I/home/cold/esp/esp-idf/components/esp_rom/include/esp32 -I/home/cold/esp/esp-idf/components/esp_rom/esp32 -I/home/cold/esp/esp-idf/components/esp_common/include -I/home/cold/esp/esp-idf/components/esp_system/include -I/home/cold/esp/esp-idf/components/esp_system/port/soc -I/home/cold/esp/esp-idf/components/esp_system/port/include/private -I/home/cold/esp/esp-idf/components/xtensa/include -I/home/cold/esp/esp-idf/components/xtensa/esp32/include -I/home/cold/esp/esp-idf/components/lwip/include -I/home/cold/esp/esp-idf/components/lwip/include/apps -I/home/cold/esp/esp-idf/components/lwip/include/apps/sntp -I/home/cold/esp/esp-idf/components/lwip/lwip/src/include -I/home/cold/esp/esp-idf/components/lwip/port/esp32/include -I/home/cold/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/cold/esp/esp-idf/components/driver/include -I/home/cold/esp/esp-idf/components/driver/deprecated -I/home/cold/esp/esp-idf/components/driver/esp32/include -I/home/cold/esp/esp-idf/components/esp_pm/include -I/home/cold/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/cold/esp/learning_components=. -fmacro-prefix-map=/home/cold/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/blink/CMakeFiles/__idf_blink.dir/blink.c.obj -MF esp-idf/blink/CMakeFiles/__idf_blink.dir/blink.c.obj.d -o esp-idf/blink/CMakeFiles/__idf_blink.dir/blink.c.obj -c /home/cold/esp/learning_components/components/blink/blink.c
/home/cold/esp/learning_components/components/blink/blink.c:9:11: error: conflicting types for 'blink_init'; have 'esp_err_t(blink_config_t *)' {aka 'int(blink_config_t *)'}
    9 | esp_err_t blink_init(blink_config_t *arg)
      |           ^~~~~~~~~~
In file included from /home/cold/esp/learning_components/components/blink/blink.c:1:
/home/cold/esp/learning_components/components/blink/include/blink.h:14:6: note: previous declaration of 'blink_init' with type 'void(void *)'
   14 | void blink_init(void *arg);
      |      ^~~~~~~~~~
/home/cold/esp/learning_components/components/blink/blink.c: In function 'blink_init':
/home/cold/esp/learning_components/components/blink/blink.c:16:16: error: 'ERR_ESP_GPIO_RESET_PIN_FAILED' undeclared (first use in this function)
   16 |         return ERR_ESP_GPIO_RESET_PIN_FAILED;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/cold/esp/learning_components/components/blink/blink.c:16:16: note: each undeclared identifier is reported only once for each function it appears in
/home/cold/esp/learning_components/components/blink/blink.c:22:16: error: 'ERR_ESP_GPIO_SET_DIRECTION_FAILED' undeclared (first use in this function)
   22 |         return ERR_ESP_GPIO_SET_DIRECTION_FAILED;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/cold/esp/learning_components/components/blink/blink.c:25:12: error: 'ERR_ESP_OK' undeclared (first use in this function); did you mean 'ESP_OK'?
   25 |     return ERR_ESP_OK;
      |            ^~~~~~~~~~
      |            ESP_OK
/home/cold/esp/learning_components/components/blink/blink.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
   26 | }
      | ^
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
